Final client manager as Friday-19th-July 2024

--- a/src/main/webapp/PasswordReset.xhtml
+++ b/src/main/webapp/PasswordReset.xhtml
@@ -26,41 +26,16 @@
                 </div>
 
                 <p:panel styleClass="customTitleBar" style="width: 80%; height: auto " id="basic" header="Password Reset">
-                    <p:growl id="messa" showDetail="true" />
-                    <h:form rendered="#{!preset.confirnReset}">
-
+                    <p:growl id="msg" showDetail="true" life="2000"/>
+                    <h:form >
                         <h:panelGrid columns="3">
-                            <p:outputLabel value="Enter Your Username"/>
-                            <p:inputText id="user" required="true" requiredMessage="You must enter a username" value="#{preset.username}"/> 
-                            <p:commandButton ajax="false" actionListener="#{preset.resetPassword()}" value="Reset Passsword" />
+                            <p:outputLabel value="Enter Your rename"/>
+                            <p:inputText id="user" required="true" requiredMessage="You must enter a username" value="#{passwordreset.username}"/> 
+                            <p:commandButton  actionListener="#{passwordreset.resetPassword()}" value="Reset Passsword" update=":msg" />
                             <p:message for="user" display="message"/>
-
-                        </h:panelGrid>
-                        <br></br>
-                        <h:outputText escape="false" style="color: #{preset.showform ? 'black':'red'}" value="#{preset.message}"/>
-                        <h:panelGrid rendered="#{preset.showform}" columns="1">
-                            <p:outputLabel style="font-weight: bold" value="Enter 6 digit Code:"/>
-                            <p:inputText required="true" requiredMessage="Reset code required" id="code" value="#{preset.codeString}"/> 
-                            <p:message for="code" display="message"/>
-                            <p:commandButton ajax="false" actionListener="#{preset.UpdatePassword()}" value="Verify" />
                         </h:panelGrid>
                     </h:form >
-                    <h:form rendered="#{preset.confirnReset}">
-                        <h:panelGrid rendered="#{!preset.success}" columns="2">
-                            <p:outputLabel value="Enter new Password"/>
-                            <p:password  id="pwd" match="pwd2" requiredMessage="Enter new password" validatorMessage="Password Must be More than 4 characters" required="true" value="#{preset.paswword}">
-                                <f:validateLength minimum="4"/>
-                            </p:password>
-                            <p:outputLabel value="Confirm Password"/>
-                            <p:password  id="pwd2" requiredMessage="Enter new password" validatorMessage="Password Must be More than 4 characters" required="true" value="#{preset.paswword}">
-                                <f:validateLength  minimum="4" />
-                            </p:password>
-                        </h:panelGrid>
-                        <p:commandButton rendered="#{!preset.success}" disabled="#{preset.success}" ajax="false" actionListener="#{preset.persistUpdate()}" value="Reset" />
-                        <h:outputLink id="link" value="home.jsf" target="_self" style="color: blue;"> 
-                            Back to login Page
-                        </h:outputLink>
-                    </h:form>
+
 
                     <noscript>   <div>   
                             <h3 style="color: red;">For full functionality of this page it is necessary to enable JavaScript. Here are the 
