--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -18,40 +18,31 @@
     <h:body>
         <ui:composition>         
             <h:form>
-
-                <div id="container" style="  height: 1%;  position:relative; " >
-
-                    <div  class="" id="left" style="">
-                        <br/>
-                        <h:outputText value="#{sessionmanager.getsessionname()}" style="float:left;text-align: left;"></h:outputText>  
-                        <br/> <br/>
-                        <p:commandButton id="dynaButton" rendered="#{menuView1.systemType}"  value="Switch to" type="button" icon="fa fa-sign-in"  style="float: left;font: 12px georgia;text-align: left; font-weight: bolder;"/>
-                        <p:menu overlay="true" model="#{menuView1.model}" trigger="dynaButton" my="left top" at="left bottom">
-                        </p:menu>                       
+                <div id="header" style="display: flex; justify-content: space-between; align-items: flex-start; padding: 10px;">
+                    <div id="left" style="flex: 1;">
+                        <h:outputText id="sessionName" value="#{sessionmanager.getsessionname()}" style="text-align: left;" escape="false"/>
+                        <br/><br/>
+                        <p:commandButton id="dynaButton" rendered="#{menuView1.systemType}" value="Switch to" type="button" icon="fa fa-sign-in" style="font: 12px georgia; text-align: left; font-weight: bolder;"/>
+                        <p:menu overlay="true" model="#{menuView1.model}" trigger="dynaButton" my="left top" at="left bottom"></p:menu>
                     </div>
-                    <div id="center" style="position: relative;left: -100px; margin-left: 80% width: 200px;  " >
-                        <a  href="#{sessionmanager.getUrl()}" target="_blank">
-                            <img src="#{sessionmanager.getLogoPath()}" alt="#{sessionmanager.getClientname()}"  
-
-                                 height="70px" width="180px"  border="0"  
-                                 style="margin-bottom: 10%"
-                                 longdesc="#{sessionmanager.getUrl()}" />
+                    <div id="center" style="flex: 1; text-align: center;">
+                        <a href="#{sessionmanager.getUrl()}" target="_blank">
+                            <img src="#{sessionmanager.getLogoPath()}" alt="#{sessionmanager.getClientname()}" height="70px" width="180px" border="0" style="margin-bottom: 10%" longdesc="#{sessionmanager.getUrl()}" />
                         </a>
-
-
                     </div>
-                    <div id="right">
-                        <br/>
-                        <p:commandButton action="#{tusercontroller.logout()}" value="Logout" ajax="false"
-                                         style="float: right;" icon="fa fa-power-off"/>
+                    <div id="right" style="flex: 1; text-align: right;">
+                        <p:commandButton action="#{tusercontroller.logout()}" value="Logout" ajax="false" style="font-weight: bold;" icon="fa fa-power-off"/>
                     </div>
                 </div>
-
+                <p:poll interval="10" update="sessionName" />
             </h:form>
+
+
 
 
         </ui:composition>
 
     </h:body>
 </html>
+
 
